--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a href="./bicicletas.html">Seleciona a sua</a>
               </div>
+              <div class="introducao-imagem">
                 <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
+              </div>
         </div>
     </main>
 
