--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./img/bikcraft.svg" alt="Bikcraft">
             </a>
           <nav aria-label="primaria">
-            <ul class="header-menu">
+            <ul class="header-menu cor-branca">
                 <li><a href="./bicicletas.html">Bicicletas</a></li>
                 <li><a href="./seguros.html">Seguros</a></li>
                 <li><a href="./contatos.html">Contato</a></li>
@@ -31,8 +31,8 @@
     <main class="introducao-bg">
         <div class="introducao">
               <div class="introducao-conteudo">
-                <h1>Bicicletas feitas sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+                <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a class="botao" href="./bicicletas.html">Seleciona a sua</a>
               </div>
               <div class="introducao-imagem">
@@ -41,5 +41,6 @@
         </div>
     </main>
 
+    <h2 class="texto-grande">Escolha a sua <span class="cor-p1">.</span></h2>
 </body>
 </html>
