--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./img/bikcraft.svg" alt="Bikcraft">
             </a>
           <nav aria-label="primaria">
-            <ul class="header-menu cor-branca">
+            <ul class="header-menu font-1-m cor-0">
                 <li><a href="./bicicletas.html">Bicicletas</a></li>
                 <li><a href="./seguros.html">Seguros</a></li>
                 <li><a href="./contatos.html">Contato</a></li>
