--- a/index.html
+++ b/index.html
@@ -41,6 +41,34 @@
         </div>
     </main>
 
-    <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+
+    <article class="bicicletas-lista">
+      <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+      <ul>
+        <li>
+          <a href="/bicicletas/magic.html">
+          <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Night</h3>
+          <span class="font-2-m cor-8">R$ 299</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="/bicicletas/magic.html">
+          <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="/bicicletas/magic.html">
+          <img src="/img/bicicletas//nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+          </a>
+        </li>
+      </ul>
+    </article>
 </body>
 </html>
