--- a/seguros.html
+++ b/seguros.html
@@ -146,10 +146,10 @@
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
-          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+          <li><a href="tel:+552199999999">+55 45 9999-9999</a></li>
           <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-          <li>Rua Ali Perto, 42 - Botafogo</li>
-          <li>Rio de Janeiro - RJ</li>
+          <li>Rua Ali Perto, 42 - Sao Paulo</li>
+          <li>Sao Paulo - SP</li>
         </ul>
         <div class="footer-redes">
           <a href="./">
