--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -90,13 +90,34 @@
         </div>
       </main>
     
+      <article class="bicicletas-lista container">
+        <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+    
+        <ul>
+          <li>
+            <a href="./magic.html">
+              <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta">
+              <h3 class="font-1-xl">Magic Might</h3>
+              <span class="font-2-m cor-8">R$ 2499</span>
+            </a>
+          </li>
+          <li>
+            <a href="./nebula.html">
+              <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+              <h3 class="font-1-xl">Nebula Cosmic</h3>
+              <span class="font-2-m cor-8">R$ 3999</span>
+            </a>
+          </li>
+        </ul>
+      </article>
+
       <footer class="footer-bg">
         <div class="footer container">
           <img src="../img/bikcraft.svg" alt="Bikcraft">
           <div class="footer-contato">
             <h3 class="font-2-l-b cor-0">Contato</h3>
             <ul class="font-2-m cor-5">
-              <li><a href="tel:+552199999999">+55 45 9999-9999</a></li>
+              <li><a href="tel:+554599999999">+55 45 9999-9999</a></li>
               <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
               <li>Rua Ali Perto, 42 - Sao Paulo</li>
               <li>Sao Paulo - SP</li>
