--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos e Condicoes</title>
     <meta name="description" content="Termos e Condicoes">
+  
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
